--- a/image.html
+++ b/image.html
@@ -12,7 +12,8 @@
     <div class="container">
         <form action="https://www.google.com/search">
             <input type="text" name="q">
-            <input type="submit" value="Google Search">
+            <input type="hidden" name="tbm" value="isch">
+            <input type="submit" value="Google Image Search">
         </form>
     </div>
 </body>
