--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form action="https://www.google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
-            <input type="submit" value="I'm Feeling Lucky" name="btnI=I%27m+Feeling+Lucky">
+            <input type="submit" value="I'm Feeling Lucky" name="btnI">
         </form>
     </div>
 </body>
