--- a/advanced.html
+++ b/advanced.html
@@ -6,12 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
     <title>Search</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
+
+
     <div class="container">
         <form action="https://www.google.com/search">
-            <input type="text" name="q">
+            All of these words:
+            <input type="text" name="as_q">
+            This exact word or phrase:
+            <input type="text" name="as_epq">
+            Any of these words (e.g. Amazon OR Google):
+            <input type="text" name="as_oq">
+            None of these words:
+            <input type="text" name="as_eq">
             <input type="submit" value="Google Search">
         </form>
     </div>
