Add flexbox styling

--- a/image.html
+++ b/image.html
@@ -24,12 +24,14 @@
         </div>
     </nav>
 
-    <div class="container">
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="hidden" name="tbm" value="isch">
-            <input type="submit" value="Google Image Search">
-        </form>
+    <div id="container">
+        <div>
+            <form action="https://www.google.com/search">
+                <input type="text" name="q">
+                <input type="hidden" name="tbm" value="isch">
+                <input type="submit" value="Google Image Search">
+            </form>
+        </div>
     </div>
 </body>
 </html>
