Align content vertically

--- a/image.html
+++ b/image.html
@@ -25,11 +25,11 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container d-flex vh-100 align-items-center justify-content-center">
         <form action="https://www.google.com/search">
-            <div class="form-group mb-3 mt-4 row">
-                <div class="col text-center">
-                    <input type="text" name="q" placeholder="Search">
+            <div class="form-group mt-3 mb-3 row">
+                <div class="col text-center my-auto">
+                    <input type="text" name="q" placeholder="Search" autofocus="true">
                     <input type="hidden" name="tbm" value="isch">
                 </div>
                 
