Clean up unused classes

--- a/image.html
+++ b/image.html
@@ -27,16 +27,16 @@
 
     <div class="container d-flex vh-100 align-items-center justify-content-center">
         <form action="https://www.google.com/search">
-            <div class="form-group mt-3 mb-3 row">
-                <div class="col text-center my-auto">
-                    <input type="text" name="q" placeholder="Search" autofocus="true">
+            <div class="form-group mb-3 row">
+                <div class="col text-center">
+                    <input type="text" name="q" placeholder="Image search" autofocus="true">
                     <input type="hidden" name="tbm" value="isch">
                 </div>
                 
             </div>
             <div class="form-group mb-3 row">
                 <div class="col text-center">
-                    <input type="submit" value="Google Image Search" class="btn btn-primary">    
+                    <input type="submit" value="Search" class="btn btn-primary">    
                 </div>
             </div>
         </form>
