--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Search</title>
 </head>
 <body>
@@ -28,11 +29,19 @@
           </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container d-flex vh-100 align-items-center justify-content-center">
         <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-            <input type="submit" value="I'm Feeling Lucky" name="btnI">
+          <div class="row form-group mb-3"> 
+            <div class="col text-center">
+              <input type="text" name="q">
+            </div>
+          </div>
+          <div class="row form-group mb-3">
+            <div class="col text-center">
+              <input type="submit" value="Google Search" class="btn btn-primary">
+              <input type="submit" value="I'm Feeling Lucky" name="btnI" class="btn btn-primary">
+            </div>
+          </div>
         </form>
     </div>
 </body>
