--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <form action="https://www.google.com/search">
           <div class="row form-group mb-3"> 
             <div class="col text-center">
-              <input type="text" name="q">
+              <input type="text" name="q" placeholder="Search" autofocus="true">
             </div>
           </div>
           <div class="row form-group mb-3">
             <div class="col text-center">
-              <input type="submit" value="Google Search" class="btn btn-primary">
+              <input type="submit" value="Search" class="btn btn-primary">
               <input type="submit" value="I'm Feeling Lucky" name="btnI" class="btn btn-primary">
             </div>
           </div>
