--- a/advanced.html
+++ b/advanced.html
@@ -43,7 +43,7 @@
             <label for="noneWords">None of these words:</label>
             <input type="text" name="as_eq" id="noneWords" class="form-control">
           </div>
-          <input type="submit" value="Search" class="btn btn-primary">
+          <input type="submit" value="Advanced Search" class="btn btn-primary">
         </form>
     </div>
 </body>
