--- a/image.html
+++ b/image.html
@@ -37,7 +37,7 @@
             </div>
             <div class="form-group mb-3 row">
                 <div class="col text-center">
-                    <input type="submit" value="Search" class="btn btn-primary">    
+                    <input type="submit" value="Image Search" class="btn btn-primary">    
                 </div>
             </div>
         </form>
